# omnimap

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cli.rs  combiner.rs  consumer.rs  index.rs  indexer.rs  js.rs  json_line.rs  main.rs  map_container.rs  mapper.rs  printer.rs  reducer.rs  result_table.rs  thread_pool.rs
