[package]
name = "omnimap"
version = "0.1.0"
authors = ["Zisis Maras <contact@zisismaras.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-js = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33.1"
num_cpus = "1.13.0"
jemallocator = "0.3.0"
base64 = "0.12.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
rocksdb = "0.14.0"
bincode = "1.2.1"
anyhow = "1.0"